# tstop

./: .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/ANN/: CMakeLists.txt
ext/geom_dist/: README_bottleneck  README_wasserstein
ext/geom_dist/bottleneck/: CMakeLists.txt
ext/geom_dist/bottleneck/include/: basic_defs_bt.h  bottleneck.h  bound_match.h  def_debug.h  neighb_oracle.h
ext/geom_dist/bottleneck/include/ANN/: ANN.h  ANNperf.h  ANNx.h  bd_tree.h  kd_fix_rad_search.h  kd_pr_search.h  kd_search.h  kd_split.h  kd_tree.h  kd_util.h  pr_queue.h  pr_queue_k.h
ext/geom_dist/bottleneck/src/: basic_defs.cpp  bottleneck.cpp  bound_match.cpp  brute.cpp  neighb_oracle.cpp
ext/geom_dist/bottleneck/src/ann/: ANN.cpp  bd_fix_rad_search.cpp  bd_pr_search.cpp  bd_search.cpp  bd_tree.cpp  kd_dump.cpp  kd_fix_rad_search.cpp  kd_pr_search.cpp  kd_search.cpp  kd_split.cpp  kd_tree.cpp  kd_util.cpp
geometry/: CMakeLists.txt  SparseVector.cpp  SparseVector.h  Vector.cpp  Vector.h  covertree.cpp  covertree.h  point_incs.h
python/persistence/: ActivitySegments.py  AverageKernel.py  BirdSoundsSegments.py  BottleneckDistances.py  CMUMocapSegments.py  ChaosPost.py  ChaoticInvariantFeatures.py  ConfigViewer.py  CrossValidation.py  DistanceLearning.py  EEGEyeSegments.py  EuclideanDistances.py  FeatureLearning.py  KernelLearning.py  KitchenMocapSegments.py  LandscapeDistances.py  NormalizePost.py  PAMAPSegments.py  ParseConfigurations.py  PartitionData.py  PersistenceGenerator.py  PersistenceKernel.py  RBFKernel.py  README.md  ScaleSpaceSimilarity.py  UCRSegments.py  WalkingSegments.py  WassersteinDistances.py  tutorial.md
scripts/: ChaosPost_stats.py  activity_recognition.py  bar_plot_from_csv.py  distributed_compute_template.py  learning_from_cross_validation.py  learning_stats.py  learning_unit_test.py  pd_plotter.py  pd_plotter_series.py  persistence_bottleneck_distance.py  persistence_density.py  persistence_segment_size_evaluation.py  rips_plotter.py  run-config.py  scatter_anim_example.py  simple_time_series_plotter.py  sparse_vs_full_rips.py  window_data.py  wrong.py  zero_persistence_graph.py
scripts/migrate_data/: distances.py  kernel.py  move_data.py  persistences.py
scripts/plots/: activity_persistence.py  bottleneck_plot.py  distance_mds.py  distance_vs_label.py  explore_persistence.py  kNN_persistence_plotter.py  neighbor_distance.py  persistence_density.py  persistence_kde.py  persistence_kde_anim.py  persistence_sample_plot.py  plot_activity.py  plot_best_distances_segment.py  plot_distance_2d.py  plot_learning.py  plot_learning_errorbars.py  plot_learning_stats.py  plot_multi_persistence.py  plot_persistence.py  plot_persistence_distance.py  plot_ucr_learning.py  segment_persistence_plotter.py  test_similarity.py  ucr_csv_results.py
topology/: CMakeLists.txt  ComputationTimer.cpp  ComputationTimer.h  bottleneck_distance.cpp  bottleneck_distance.h  dtw.h  dtw_python.cpp  dtw_python.hpp  euclidean_space.cpp  euclidean_space.h  filtration.cpp  filtration.h  fps_rips_filtration.cpp  fps_rips_filtration.h  generalized_metric_space.cpp  generalized_metric_space.h  hungarianC.h  landscape_distance.cpp  landscape_distance.h  metric_space.cpp  metric_space.h  persistence.cpp  persistence.h  persistenceBarcode.h  persistenceLandscape.h  persistence_dataset.cpp  persistence_dataset.h  persistence_diagram.cpp  persistence_diagram.h  relaxed_metric_space.cpp  relaxed_metric_space.h  rips_filtration.cpp  rips_filtration.h  rips_python.cpp  rips_python.hpp  scale_space_kernel.cpp  scale_space_kernel.h  segment_dataset.cpp  segment_dataset.h  simplex.cpp  (+9 more)
topology/distance_learning/: knn_persistence_classifier.cpp  knn_persistence_classifier.h
topology/munkres/: HungarianDistance.cpp  HungarianDistance.h  munkres.cpp  munkres.h
topology/python/: py_persistence.cpp
(+24 files in other folders)
